Instucciones en ingles

--- a/Thingsboard/descarga_thingsboard/Descarga_datos.ipynb
+++ b/Thingsboard/descarga_thingsboard/Descarga_datos.ipynb
@@ -4,18 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Libreta para la descarga de datos del dispositivo"
+    "# Libreta para la descarga de datos del dispositivo / Notebook for downloading data from the device\n",
+    "\n",
+    "---"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Español\n",
+    "\n",
     "Para poder ejecutar esta libreta se debe tener git instalado y la libreria **iertools**.\n",
     "\n",
     "Para instalar git basta descargar el instalable de [esta página](https://git-scm.com/).\n",
     "\n",
     "Puede instalar la librería en Jupyter notebook usando esta orden una vez:\n",
+    "\n",
     "```\n",
     "pip install git+https://github.com/AltamarMx/iertools.git\n",
     "\n",
@@ -30,7 +35,35 @@
     "    tenant       -->    Cuenta de thigsboard\n",
     "    password     -->    Clave de la cuenta\n",
     "    host         -->    Servidor de thingsboard\n",
-    "    port         -->    Puerto"
+    "    port         -->    Puerto\n",
+    "\n",
+    "\n",
+    "---\n",
+    "\n",
+    "# English\n",
+    "\n",
+    "In order to run this notebook you must have git installed and the **iertools** library.\n",
+    "\n",
+    "To install git just download the installer from [this page](https://git-scm.com/).\n",
+    "\n",
+    "You can install the library on Jupyter notebook using this command once:\n",
+    "\n",
+    "```\n",
+    "pip install git+https://github.com/AltamarMx/iertools.git\n",
+    "\n",
+    "```\n",
+    "\n",
+    "You need to download the xlsx file of the form and save it with the name **Formulario.xlsx** in the **data** folder.\n",
+    "\n",
+    "To reference the device in Thingsboard, the following data must be included in the **config.ini** file:\n",
+    "\n",
+    "    Device       -->    Name to refer to the device\n",
+    "    token        -->    Device Token\n",
+    "    device_id    -->    Device ID\n",
+    "    tenant       -->    Thingsboard account\n",
+    "    password     -->    Account password\n",
+    "    host         -->    Thingsboard server\n",
+    "    port         -->    Port"
    ]
   },
   {
@@ -57,7 +90,7 @@
    "metadata": {},
    "source": [
     "-----------------------------------------------------------------------------\n",
-    "En la siguiente celda llena los datos requeridos."
+    "En la siguiente celda llena los datos requeridos. / In the following cell fill the required data."
    ]
   },
   {
@@ -66,10 +99,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "formulario = '../data/Formulario.xlsx'             # ruta de ubicación del formulario\n",
-    "nombre_dispositivo = 'Nombre del dispositivo'      # nombre del dispositivo a descargar los datos de Thingsboard, tal como aparece en el archivo config.ini\n",
+    "formulario = '../data/Formulario.xlsx'             # ruta de ubicación del formulario / form path\n",
+    "nombre_dispositivo = 'Nombre del dispositivo'      # Nombre del dispositivo en config.ini para descargar datos de Thingsboard / Device name in config.ini for downloading data from Thingsboard\n",
     "\n",
-    "# Rango de fechas para la descarga de datos del dispositivo\n",
+    "# Rango de fechas para la descarga de datos / Date range for data download\n",
     "fecha1 = parse(\"2024-01-01\")  \n",
     "fecha2 = datetime.datetime.now()"
    ]
@@ -87,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Descarga de los datos de Thingsboard\n",
+    "# Descarga de los datos de Thingsboard / Downloading data from Thingsboard\n",
     "\n",
     "tmp= TB(config_file='config.ini',device_name=nombre_dispositivo) \n",
     "encuesta = [\n",
@@ -109,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lectura de los datos del formulario\n",
+    "# Lectura de los datos del formulario / Reading data from the form\n",
     "\n",
     "form = pd.read_excel(formulario)\n",
     "form.set_index('Nombre del dispositivo',inplace=True)"
@@ -158,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Definición de diccionarios para la presentación de la tabla\n",
+    "# Diccionarios para la presentación de la tabla / Dictionaries for the table presentation\n",
     "\n",
     "diccionario_aceptacion = {\n",
     "    0: \"No\",\n",
@@ -218,7 +251,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Nuevos nombres de columnas para el formato de la tabla\n",
+    "# Nuevos nombres de columnas para el formato de la tabla / New column names for the table formatting\n",
     "\n",
     "nuevos_nombres = [ 'T_w', 'CLO', 'MET', 'Location', 'TS', 'A', 'BPMs', 'Age', 'W', 'H', 'Sex', 'fr' ]\n",
     "Dispositivo.index.name = 'date'\n",
@@ -233,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Visualización de la tabla\n",
+    "# Visualización de la tabla / Table visualization\n",
     "\n",
     "Dispositivo"
    ]
