Instucciones en ingles

--- a/Thingsboard/descarga_thingsboard/Descarga_datos.ipynb
+++ b/Thingsboard/descarga_thingsboard/Descarga_datos.ipynb
@@ -4,16 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Libreta para la descarga de datos del dispositivo / Notebook for downloading data from the device\n",
+    "# Libreta para la descarga de datos del dispositivo \n",
     "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Español\n",
+    "## Español\n",
     "\n",
     "Para poder ejecutar esta libreta se debe tener git instalado y la libreria **iertools**.\n",
     "\n",
@@ -40,7 +33,9 @@
     "\n",
     "---\n",
     "\n",
-    "# English\n",
+    "# Notebook for downloading data from the device\n",
+    "\n",
+    "## English\n",
     "\n",
     "In order to run this notebook you must have git installed and the **iertools** library.\n",
     "\n",
